# mcp-forge

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: automerge.yml  rust.yml
src/: lib.rs  main.rs  prompts.rs  resources.rs  server.rs  tool_executor.rs  tools.rs
templates/: Cargo.toml.template  advanced-tool.rs.template  error.rs.template  lib.rs.template  main.rs.template  prompts-advanced.rs.template  resources-advanced.rs.template  resources.rs.template  server.rs.template  tools.rs.template
